--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
                 <section>
                     <h2>Customer Engagement Solution</h2>
-                    
+                    <a href="http://www.gliffy.com/go/publish/10358909" target="_blank"><img src="https://www.gliffy.com/go/publish/image/10358909/L.png" style="border: 0px; height: 75%; width: 75%;"></a>
                 </section>
 
                 <section>
