Added copyright notice.

--- a/index.html
+++ b/index.html
@@ -32,11 +32,23 @@
         <!--[if lt IE 9]>
         <script src="lib/js/html5shiv.js"></script>
         <![endif]-->
+
+        <style>
+            .reveal .footer {
+              position: absolute;
+              bottom: 1em;
+              left: 1em;
+              font-size: 0.5em;
+            }
+        </style>
     </head>
 
     <body>
 
         <div class="reveal">
+            <div class='footer'>
+                &copy;2016 Battle Road Consulting.  All Rights Reserved.
+            </div>
 
             <!-- Any section element inside of this container is displayed as a slide -->
             <div class="slides">
