Added Business Need content to slide.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
                 <section>
                     <h2>Business Need</h2>
                     <ul>
-                        <li>One</li>
+                        <li>No system of record for marketing data made attribution inconsistent and inaccurrate</li>
+                        <li>Databases were not designed for multi-tenant platform</li>
+                        <li>Client configuration was not accounted for when data was used</li>
+                        <li>Data quality was inconsistently reviewed</li>
+                        <li>Data needed to be consistently maintained across services</li>
                     </ul>
                 </section>
 
