Added Features content to slide.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,12 @@
                 <section>
                     <h2>Features</h2>
                     <ul>
-                        <li>One</li>
+                        <li>API contract defined by <a href="http://json-schema.org/" target="_blank">JSON Schema</a>-based schemas</li>
+                        <li>Schemas presented by their own service</li>
+                        <li>API domain organized by micro-services and presented to look like a single application</li>
+                        <li>User experience uses same APIs available for other applications</li>
+                        <li>Server tier built on integration platform (<a href="https://www.mulesoft.com/platform/mule" target="_blank">Mule ESB</a>) to make integrating with new services cheap to implement</li>
+                        <li>Design translates batch-driven into event-driven making processing data less failure-prone</li>
                     </ul>
                 </section>
 
