Fixed byline links.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <h2>Managing Data with Microservices</h2>
                     <h3>Building a Flexible Integration Platform</h3>
                     <p>
-                        <small>Authored by <a href="http://www.battleroadconsulting.com">Tim Spaulding</a> / <a href="http://twitter.com/rx00405">@rx00405</a></small>
+                        <small>Authored by <a href="http://www.battleroadconsulting.com" target="_blank">Tim Spaulding</a> / <a href="https://twitter.com/rx00405" target="_blank">@rx00405</a></small>
                     </p>
                 </section>
 
